exercise list tables

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -1,10 +1,10 @@
 {
     "completionsTitle":"Completed courses",
     "nocompletionsText": "You have not completed any courses yet.",
-    "completedDate": "Completed: ",
-    "registeredDate": "Registered: ",
+    "completedDate": "Completed",
+    "registeredDate": "Registered",
     "registerButtonText": "register",
-    "completionLanguage":"course language:",
+    "completionLanguage":"course language",
     "seeCompletions":"See all completions here",
     "seePoints": "See all points here",
     "researchOkAnswer": "Thanks for your answer!",
@@ -17,37 +17,41 @@
     "tabCompletions": "Completions",
     "tabSettings": "Settings",
     "registerCompletion": "Register completion",
-    "completionTier": "completion tier:",
+    "completionTier": "completion tier",
     "completionTier-1": "beginner",
     "completionTier-2": "intermediate",
     "completionTier-3": "advanced",
-    "organization": "Organization: ",
+    "organization": "Organization",
     "REJECTED": "Rejected",
     "GIVE_PEER_REVIEW": "Too few peer reviews given",
     "PENDING_PEER_REVIEW": "Waiting for peer reviews",
+    "part": "Part",
+    "section": "Section",
+    "partSection": "Part/section",
     "exercise": "Exercise",
     "points": "Points",
     "completed": "Completed",
     "attempted": "Attempted",
     "requiredActions": "Required actions",
+    "submissionDate": "Submission date",
+    "tier": "Tier",
     "yes": "yes",
     "no": "no",
     "progress": "Progress",
     "totalProgress": "Total progress",
     "tierProgress": "Progress on tier",
     "progressByTier": "Progress by tier",
+    "exercises": "Exercises",
     "exercisesCompleted": "Exercises completed",
     "partProgress": "Progress by part",
-    "grade": "grade:",
-    "courseStartDate": "Course started: ",
-    "firstExerciseDate": "First exercise: ",
-    "latestExerciseDate": "Latest exercise: ",
+    "grade": "grade",
+    "courseStartDate": "Course started",
+    "firstExerciseDate": "First exercise",
+    "latestExerciseDate": "Latest exercise",
     "relevantDatesTooltip": "Course start date is the date when the user course settings are created. This may or may not reflect the actual first registration date or when user first logged into the course material.\nFirst exercise date is the date of the first exercise completion submitted.",
-    "createdAt": "Created at: ",
-    "timestamp": "Original timestamp: ",
+    "createdAt": "Created at",
+    "timestamp": "Original timestamp",
     "exerciseInfoTooltip": "Created at is the date the exercise completion has been synced in MOOC.fi.\nTimestamp is the original submission date.",
-    "part": "Part",
-    "section": "Section",
     "completionCollapseTooltip": "Show/hide completion details",
     "courseCollapseTooltip": "Show/hide course details",
     "exerciseCompletionCollapseTooltip": "Show/hide exercise completion details",
@@ -56,9 +60,9 @@
     "allCoursesCollapseTooltip": "Show/hide all courses",
     "showLess": "Show less",
     "showDetailedBreakdown": "Show detailed breakdown",
-    "name": "Name: ",
-    "email": "Email: ",
-    "studentNumber": "Student number: ",
+    "name": "Name",
+    "email": "Email",
+    "studentNumber": "Student number",
     "noPointsData": "No points data available",
     "noDetailsAvailable": "No details available",
     "total": "total",
