--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -1,10 +1,10 @@
 {
     "completionsTitle":"Suoritetut kurssit",
     "nocompletionsText": "Ei suoritettuja kursseja.",
-    "completedDate": "Suoritettu: ",
-    "registeredDate": "Rekisteröity: ",
+    "completedDate": "Suoritettu",
+    "registeredDate": "Rekisteröity",
     "registerButtonText": "rekisteröi",
-    "completionLanguage":"suorituskieli:",
+    "completionLanguage":"suorituskieli",
     "seeCompletions":"Katso kaikki kurssisuorituksesi täältä",
     "seePoints":"Katso kaikki kurssipisteesi täältä",
     "researchOkAnswer": "Kiitos vastauksestasi!",
@@ -17,19 +17,24 @@
     "tabCompletions": "Suoritukset",
     "tabSettings": "Asetukset",
     "registerCompletion": "Rekisteröi suoritus",
-    "completionTier": "suoritustaso:",
+    "completionTier": "suoritustaso",
     "completionTier-1": "aloittelija",
     "completionTier-2": "keskitaso",
     "completionTier-3": "edistynyt",
-    "organization": "Organisaatio: ",
+    "organization": "Organisaatio",
     "REJECTED": "Hylätty",
     "GIVE_PEER_REVIEW": "Liian vähän vertaisarvioita annettu",
     "PENDING_PEER_REVIEW": "Odottaa vertaisarvioita",
+    "part": "Osa",
+    "section": "Luku",
+    "partSection": "Osa/luku",
     "exercise": "Tehtävä",
     "points": "Pisteet",
     "completed": "Suoritettu",
     "attempted": "Yritetty",
     "requiredActions": "Vaaditut toimenpiteet",
+    "submissionDate": "Palautuksen pvm",
+    "tier": "Taso",
     "yes": "kyllä",
     "no": "ei",
     "progress": "Edistyminen",
@@ -37,17 +42,16 @@
     "tierProgress": "Edistyminen tasolla",
     "progressByTier": "Edistyminen tasoittain",
     "partProgress": "Edistyminen osioittain",
+    "exercises": "Tehtävät",
     "exercisesCompleted": "Tehtyjä tehtäviä",
-    "grade": "arvosana:",
-    "courseStartDate": "Kurssi aloitettu: ",
-    "firstExerciseDate": "Ensimmäinen tehtävä: ",
-    "latestExerciseDate": "Viimeisin tehtävä: ",
+    "grade": "arvosana",
+    "courseStartDate": "Kurssi aloitettu",
+    "firstExerciseDate": "Ensimmäinen tehtävä",
+    "latestExerciseDate": "Viimeisin tehtävä",
     "relevantDatesTooltip": "Kurssin aloituspäivämäärä on käyttäjän kurssiasetusten luontipäivä. Tämä ei välttämättä ole juuri se päivä jolloin käyttäjä ensimmäisen kerran kirjautui kurssimateriaaliin.\nEnsimmäisen tehtävän päivämäärä on ensimmäisen kurssin tehtäväpalautuksen ajankohta.",
-    "createdAt": "Luotu: ",
-    "timestamp": "Aikaleima: ",
+    "createdAt": "Luotu",
+    "timestamp": "Aikaleima",
     "exerciseInfoTooltip": "Luontipäivämäärä tarkoittaa päivää jolloin tehtäväpalautus on synkronisoitu MOOC.fi-palveluun.\nAikaleima on alkuperäisen tehtäväpalautuksen päivämäärä.",
-    "part": "Osa",
-    "section": "Luku",
     "completionCollapseTooltip": "Näytä/piilota suoritus",
     "courseCollapseTooltip": "Näytä/piilota kurssi",
     "exerciseCompletionCollapseTooltip": "Näytä/piilota tehtäväpalautus",
@@ -56,9 +60,9 @@
     "allCoursesCollapseTooltip": "Näytä/piilota kaikki kurssit",
     "showLess": "Näytä vähemmän",
     "showDetailedBreakdown": "Näytä enemmän",
-    "name": "Nimi: ",
-    "email": "Sähköposti: ",
-    "studentNumber": "Opiskelijanumero: ",
+    "name": "Nimi",
+    "email": "Sähköposti",
+    "studentNumber": "Opiskelijanumero",
     "noPointsData": "Tietoja ei saatavilla",
     "noDetailsAvailable": "Lisätietoja ei saatavilla",
     "total": "yhteensä",
