--- a/frontend/translations/register-completion/en.json
+++ b/frontend/translations/register-completion/en.json
@@ -5,14 +5,14 @@
     "credits_details": "The Open University of the University of Helsinki is responsible for registering the credits. Registering the credits is free.",
     "donow": "Register to the Open University of the University of Helsinki, so we can process your credits.",
     "instructions-title": "Follow these instructions: ",
-    "Instructions1":"Use this e-mail address on the enrollment form:",
-    "Instructions2": "1. Fill in the enrollment form.",
-    "Instructions3": "2. At the form field: 'Your email address on the MOOC course' fill in:  ",
-    "Instructions4": "3. If you want an e-mail notification when the credits have been registered, tick the box  'A notification of completed studies will be sent to my email (including the grade)'. ",
-    "NB": "NOTE! Bachelor's - and Master's degree students from University of Helsinki must also register their credits via the Open University!",
+    "InstructionsEmail":"Use the e-mail address <strong>{{email}}</strong> on the enrollment form.",
+    "Instructions1": "Fill in the enrollment form.",
+    "Instructions2": "At the form field <em>Your email address on the MOOC course</em> fill in <strong>{{email}}</strong>",
+    "Instructions3": "If you want an e-mail notification when the credits have been registered, tick the box <em>A notification of completed studies will be sent to my email (including the grade)</em>.",
+    "NB": "<strong>NOTE!</strong> Bachelor's and Master's degree students from University of Helsinki must also register their credits via the Open University!",
     "grades": "Credits will be registered within 6 weeks.",
     "link": "To the enrollment form",
-    "linkAria": "To the enrollment form. Opens in a new tab. Moves to the service of the Open University.",
+    "linkAria": "To the enrollment form. External link to the Open University opens in a new tab.",
     "course_completion_not_found_title": "Completion not found",
     "course_completion_not_found": "Cannot find course completion. Are you logged in with the right account?",
     "course_not_found_title": "Course not found",
@@ -20,9 +20,12 @@
     "course_completion_already_registered_title": "Completion already registered",
     "course_completion_already_registered": "Course completion has already been registered.",
     "see_completion_link": "After your completion has been registered, you can view your completed credits at Koski: ",
-    "see_completion_NB":"NOTE! There is some delay on registering a completion and the credits being visible at Koski.",
+    "see_completion_NB":"<strong>NOTE!</strong> There is some delay on registering a completion and the credits being visible at Koski.",
     "open_university_registration_not_open": "Open University registration is not open at the moment for the course",
     "registrationClosed": "Open University Registration will be closed from May 15th through May 30th 2021.",
     "error": "Error",
-    "notLoggedIn": "You are not logged in. Please log in to the site."
+    "notLoggedIn": "You are not logged in. Please log in to the site.",
+    "fi_FI": "Finnish",
+    "en_US": "English",
+    "sv_SE": "Swedish"
 }
