--- a/frontend/translations/register-completion/fi.json
+++ b/frontend/translations/register-completion/fi.json
@@ -5,14 +5,14 @@
     "credits_details": "Helsingin yliopiston avoin yliopisto hoitaa suoritusten rekisteröinnin. Opintosuorituksen rekisteröinti on ilmaista.",
     "donow": "Sinun tulee ilmoittautua Helsingin yliopiston avoimeen yliopistoon, jotta voimme rekisteröidä suorituksesi.",
     "instructions-title": "Toimi näin:",
-    "Instructions1": "Käytä rekisteröintilomakkeessa sähköpostiosoitetta:",
-    "Instructions2": "1. Täytä rekisteröintilomake. ",
-    "Instructions3": "2. Täytä kohtaan: 'Käyttämäsi sähköpostiosoite MOOC-kurssilla' sähköpostiosoitteeksi:",
-    "Instructions4": "3. Jos haluat tiedon sähköpostiisi opintopisteidesi kirjautumisesta, rastita 'Henkilötietojen käyttö' -laatikon alta kohta 'Opintosuorituksista lähetetään ilmoitus sähköpostiini (sisältää arvosanan).' ",
-    "NB": "Jos olet Helsingin yliopiston perustutkinto-opiskelija, ilmoittatumisohjeet koskevat myös sinua!",
+    "InstructionsEmail": "Käytä rekisteröintilomakkeessa sähköpostiosoitetta <strong>{{email}}</strong>",
+    "Instructions1": "Täytä rekisteröintilomake. ",
+    "Instructions2": "Täytä kohtaan <em>Käyttämäsi sähköpostiosoite MOOC-kurssilla</em> sähköpostiosoitteeksi <strong>{{email}}</strong>",
+    "Instructions3": "Jos haluat tiedon sähköpostiisi opintopisteidesi kirjautumisesta, rastita <em>Henkilötietojen käyttö</em> -laatikon alta kohta <em>Opintosuorituksista lähetetään ilmoitus sähköpostiini (sisältää arvosanan)</em>.",
+    "NB": "<strong>HUOM!</strong> Jos olet Helsingin yliopiston perustutkinto-opiskelija, ilmoittatumisohjeet koskevat myös sinua!",
     "grades": "Opintopisteet kirjautuvat kuuden viikon kuluessa.",
     "link": "Rekisteröitymislomakkeeseen",
-    "linkAria": "Linkki rekisteröitymislomakkeeseen. Avautuu uudessa välilehdessä. Siirtyy avoimen yliopiston palveluun.",
+    "linkAria": "Linkki rekisteröitymislomakkeeseen. Avoimen yliopiston palvelu avautuu uudessa välilehdessä.",
     "course_completion_not_found_title": "Suoritusta ei löytynyt",
     "course_completion_not_found": "Kurssisuoritusta ei löytynyt. Oletko kirjautunut sisään oikealla käyttäjätunnuksella?",
     "course_not_found_title": "Kurssia ei löytynyt",
@@ -20,9 +20,12 @@
     "course_completion_already_registered_title": "Suoritus jo rekisteröity",
     "course_completion_already_registered": "Kurssisuorituksesi on rekisteröity jo aiemmin.",
     "see_completion_link":"Kun opintosuorituksesi on rekisteröity, pääset tarkastelemaan opintosuorituksesi tietoja Koski-palvelusta:",
-    "see_completion_NB":"HUOM! Opintosuoritus siirtyy Koski-palveluun viiveellä sen kirjautumisesta Helsingin yliopiston opintorekisteriin.",
+    "see_completion_NB":"<strong>HUOM!</strong> Opintosuoritus siirtyy Koski-palveluun viiveellä sen kirjautumisesta Helsingin yliopiston opintorekisteriin.",
     "open_university_registration_not_open": "Avoimen yliopiston rekisteröityminen ei ole tällä hetkellä auki kurssille",
     "registrationClosed": "Avoimen yliopiston rekisteröityminen on suljettu välillä 15.5.-30.5.2021.",
     "error": "Virhe",
-    "notLoggedIn": "Et ole kirjautunut sisään. Ole hyvä ja kirjaudu sisään."
+    "notLoggedIn": "Et ole kirjautunut sisään. Ole hyvä ja kirjaudu sisään.",
+    "fi_FI": "suomi",
+    "en_US": "englanti",
+    "sv_SE": "ruotsi"
 }
