--- a/frontend/translations/register-completion/se.json
+++ b/frontend/translations/register-completion/se.json
@@ -5,14 +5,14 @@
     "credits_details": "Öppna universitetet vid Helsingfors universitet sköter om registreringen av prestationer. Registreringen är gratis. ",
     "donow": "Anmäl dig till Öppna universitetet så att vi kan registrera din prestation.",
     "instructions-title": "Gör så här: ",
-    "Instructions1": "I anmälningsblanketten ska du ange e-postadress:",
-    "Instructions2": "1. Fyll i anmälningsblanketten.",
-    "Instructions3": "2. På anmälningsblanketten ska du ange e-postadressen som du använder på MOOC-kursen:  ",
-    "Instructions4": "3. Om du vill bli meddelad per e-post då dina studiepoäng registrerats ska du kryssa för “Meddelanden om studieprestationer skickas till min e-post (innehåller vitsordet)”. ",
-    "NB": "Denna anvisning gäller dig även om du är grundexamensstuderande vid Helsingfors universitet!",
+    "InstructionsEmail": "I anmälningsblanketten ska du ange e-postadress <strong>{{email}}</strong>",
+    "Instructions1": "Fyll i anmälningsblanketten.",
+    "Instructions2": "På anmälningsblanketten ska du ange e-postadressen som du använder på MOOC-kursen: <strong>{{email}}</strong>",
+    "Instructions3": "Om du vill bli meddelad per e-post då dina studiepoäng registrerats ska du kryssa för <em>Meddelanden om studieprestationer skickas till min e-post (innehåller vitsordet)</em>. ",
+    "NB": "<strong>OBS!</strong> Denna anvisning gäller dig även om du är grundexamensstuderande vid Helsingfors universitet!",
     "grades": "Studiepoängen registreras senast sex veckor efter att anmälan har lämnats in.",
     "link": "Till anmälningsblanketten",
-    "linkAria": "Till anmälningsblanketten. Öppnas i en ny flik. Flyttas till Öppna universitetets tjänst.",
+    "linkAria": "Till anmälningsblanketten. Öppna universitetets tjänst öppnas i en ny flik.",
     "course_completion_not_found_title": "Prestation hittas ej",
     "course_completion_not_found": "Prestation hittas ej. Är du inloggad med rätt inloggningsuppgifter?",
     "course_not_found_title": "Kursen hittas ej",
@@ -20,9 +20,12 @@
     "course_completion_already_registered_title": "Prestation redan registrerat",
     "course_completion_already_registered": "Din prestation har registrerats förr.",
     "see_completion_link":"När din studieprestation registrerats har du möjligheten att granska information gällande prestationen i Koski-tjänsten: ",
-    "see_completion_NB":"OBS! Studieprestationen överförs till Koski-tjänsten med fördröjning efter att den skrivits in i Helsingfors universitets studieregister.",
+    "see_completion_NB":"<strong>OBS!</strong> Studieprestationen överförs till Koski-tjänsten med fördröjning efter att den skrivits in i Helsingfors universitets studieregister.",
     "open_university_registration_not_open": "Registreringen till Öppna universitetet är för tillfället inte öppen för kursen",
     "registrationClosed": "Registreringen till Öppna universitetet är stängd 27.2.-14.3.2021.",
     "error": "Det har skett ett fel",
-    "notLoggedIn": "Du är inte inloggad. Var så god och logga in."
+    "notLoggedIn": "Du är inte inloggad. Var så god och logga in.",
+    "fi_FI": "finska",
+    "en_US": "engelska",
+    "sv_SE": "svenska"
 }
