--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -32,6 +32,8 @@
     "points": "Pisteet",
     "completed": "Suoritettu",
     "attempted": "Yritetty",
+    "notCompleted": "Ei suoritettu",
+    "notAttempted": "Ei yritetty",
     "requiredActions": "Vaaditut toimenpiteet",
     "submissionDate": "Palautuksen pvm",
     "tier": "Taso",
