summary page loading etc.

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -85,5 +85,6 @@
     "orderAscending": "Ascending",
     "orderDescending": "Descending",
     "pointsRequired": "required",
-    "selectedCourse": "Selected course"
+    "selectedCourse": "Selected course",
+    "noCourseFound": "No course found. Are you sure you have the right link?"
 }
