add table locales; tier exercise list fixes

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -84,5 +84,7 @@
     "firstPage": "first page",
     "lastPage": "last page",
     "previousPage": "previous page",
-    "nextPage": "next page"
+    "nextPage": "next page",
+    "copyToClipboard": "Copy to clipboard",
+    "copiedToClipboard": "Copied!"
 } 
