styling; add backend option to sort ucs

--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -48,6 +48,7 @@
     "exercises": "Exercises",
     "combinedExercises": "Combined exercises",
     "exercisesCompleted": "Exercises completed",
+    "submissions": "Submissions",
     "partProgress": "Progress by part",
     "grade": "grade",
     "courseStartDate": "Course started",
