--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -49,6 +49,7 @@
     "exercises": "Tehtävät",
     "combinedExercises": "Yhdistetyt tehtävät",
     "exercisesCompleted": "Tehtyjä tehtäviä",
+    "submissions": "Palautukset",
     "grade": "arvosana",
     "courseStartDate": "Kurssi aloitettu",
     "firstExerciseDate": "Ensimmäinen tehtävä",
