add some tooltips for summary table headers

--- a/frontend/translations/courses/fi.json
+++ b/frontend/translations/courses/fi.json
@@ -83,7 +83,7 @@
   "courseStartDate": "Kurssin alkamispäivämäärä",
   "courseEndDate": "Kurssin loppumispäivämäärä",
   "courseInstanceLanguage": "Kurssi-instanssin kieli",
-  "courseTeacherInChargeName": "Vastuuhenkilön nimi",
+  "courseTeacherInChargeName": "Vastuuhenkilö",
   "courseTeacherInChargeEmail": "Vastuuhenkilön sähköpostiosoite",
   "courseSupportEmail": "Kurssin tukisähköpostiosoite",
   "courseVariantsTitle": "Kurssivariantit",
@@ -105,6 +105,9 @@
   "courseInheritSettingsFrom": "Peri asetukset kurssilta",
   "courseTier": "Taso",
   "courseNewCourse": "Uusi kurssi",
+  "courseEditCourse": "Muokkaa kurssia {{name}}",
+  "courseToCoursePage": "Kurssin {{name}} sivulle",
+  "courseCloneCourse": "Kloonaa kurssi {{name}}",
   "helpSlug": "Slug on kurssin uniikki tunniste, esim. elements-of-ai, ohpe.",
   "helpName": "Kurssin nimi -- yleensä käyttäjälle näkyvä nimi tulee käännöksistä, mutta tämänkin on hyvä olla kuvaava.",
   "helpStartPoint": "\"Aloita tästä\"-merkki etusivun kurssikortissa.",
