--- a/frontend/translations/profile/en.json
+++ b/frontend/translations/profile/en.json
@@ -32,12 +32,16 @@
     "partSection": "Part/section",
     "exercise": "Exercise",
     "points": "Points",
+    "exerciseStatus": "Exercise status",
     "completed": "Completed",
     "attempted": "Attempted",
     "notCompleted": "Not completed",
     "notAttempted": "Not attempted",
     "requiredActions": "Required actions",
     "submissionDate": "Submission date",
+    "completedTooltip": "Has fulfilled all the exercise completion requirements",
+    "attemptedTooltip": "Has submitted the exercise at least once",
+    "requiredActionsTooltip": "Required actions to take to complete the exercise",
     "tier": "Tier",
     "yes": "yes",
     "no": "no",
