--- a/frontend/translations/profile/fi.json
+++ b/frontend/translations/profile/fi.json
@@ -31,12 +31,16 @@
     "section": "Luku",
     "partSection": "Osa/luku",
     "exercise": "Tehtävä",
+    "exerciseStatus": "Tehtävän tila",
     "points": "Pisteet",
     "completed": "Suoritettu",
     "attempted": "Yritetty",
     "notCompleted": "Ei suoritettu",
     "notAttempted": "Ei yritetty",
     "requiredActions": "Vaaditut toimenpiteet",
+    "completedTooltip": "Kaikki tehtäväsuorituksen ehdot täytetty",
+    "attemptedTooltip": "Palauttanut tehtävän ainakin kerran",
+    "requiredActionsTooltip": "Tehtäväsuoritukseen vaadittavat toimenpiteet",
     "submissionDate": "Palautuksen pvm",
     "tier": "Taso",
     "yes": "kyllä",
