--- a/frontend/translations/courses/en.json
+++ b/frontend/translations/courses/en.json
@@ -83,8 +83,8 @@
   "courseStartDate": "Course start date",
   "courseEndDate": "Course end date",
   "courseInstanceLanguage": "Course instance language",
-  "courseTeacherInChargeName": "Teacher in charge - name",
-  "courseTeacherInChargeEmail": "Teacher in charge - email",
+  "courseTeacherInChargeName": "Teacher in charge",
+  "courseTeacherInChargeEmail": "Teacher in charge email",
   "courseSupportEmail": "Course support email",
   "courseVariantsTitle": "Course variants",
   "courseUserCourseSettingsVisibility": "User count visibility",
@@ -105,6 +105,9 @@
   "courseInheritSettingsFrom": "Inherit settings from",
   "courseTier": "Tier",
   "courseNewCourse": "New course",
+  "courseEditCourse": "Edit course {{name}}",
+  "courseToCoursePage": "To the course page of {{name}}",
+  "courseCloneCourse": "Clone course {{name}}",
   "helpSlug": "A slug is a unique identifier for a course, ie. elements-of-ai, ohpe.",
   "helpName": "Course name -- usually the course name visible to the user comes from the translation, but keep this descriptive as well.",
   "helpStartPoint": "\"Start with these\" tag for course in front page.",
