added special other_language language tag; refactored courses page to be more responsive

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -86,5 +86,8 @@
     "previousPage": "previous page",
     "nextPage": "next page",
     "copyToClipboard": "Copy to clipboard",
-    "copiedToClipboard": "Copied!"
+    "copiedToClipboard": "Copied!",
+    "language": "Language",
+    "difficulty": "Difficulty",
+    "module": "Module"
 } 
