--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -86,6 +86,9 @@
     "previousPage": "edellinen sivu",
     "nextPage": "seuraava sivu",
     "copyToClipboard": "Kopioi leikepöydälle",
-    "copiedToClipboard": "Kopioitu!"
+    "copiedToClipboard": "Kopioitu!",
+    "language": "Kieli",
+    "difficulty": "Vaikeustaso",
+    "module": "Kokonaisuus"
 }
 
