add tooltip with other languages; some skeletons; fix hydration issue

--- a/frontend/translations/common/en.json
+++ b/frontend/translations/common/en.json
@@ -89,5 +89,6 @@
     "copiedToClipboard": "Copied!",
     "language": "Language",
     "difficulty": "Difficulty",
-    "module": "Module"
+    "module": "Module",
+    "courseOtherLanguages": "Also available in"
 } 
