--- a/frontend/translations/common/fi.json
+++ b/frontend/translations/common/fi.json
@@ -89,6 +89,7 @@
     "copiedToClipboard": "Kopioitu!",
     "language": "Kieli",
     "difficulty": "Vaikeustaso",
-    "module": "Kokonaisuus"
+    "module": "Kokonaisuus",
+    "courseOtherLanguages": "Saatavilla myös kielillä"
 }
 
