Tweaks to the new layout (WIP)

--- a/frontend/translations/home/en.json
+++ b/frontend/translations/home/en.json
@@ -8,6 +8,7 @@
     "allCoursesTitle": "All Courses",
     "upcomingCoursesTitle":"Upcoming Courses",
     "endedCoursesTitle": "Old courses",
+    "popularCoursesTitle": "Popular courses",
     "emailHeader": "Get notified of new courses",
     "emailButton": "SUBSCRIBE",
     "emailThanks": "Thanks for joining the list!",
@@ -15,6 +16,10 @@
     "moduleCourseStartPoint": "Start with this",
     "showLimited": "Show less",
     "showAll": "Show all",
+    "showAllCourses": "Show all courses",
+    "studyModulesTitle": "Study modules",
+    "moduleInformation": "Module information",
+    "showAllModules": "Show all modules",
     "moduleCourseTitle": "Courses belonging to this module",
     "coursePageAvailable": "Course page available",
     "privacyPolicy": "Privacy policy",
