--- a/frontend/translations/home/fi.json
+++ b/frontend/translations/home/fi.json
@@ -8,6 +8,7 @@
     "allCoursesTitle": "Kaikki kurssit",
     "upcomingCoursesTitle": "Tulevat kurssit",
     "endedCoursesTitle": "Päättyneet kurssit",
+    "popularCoursesTitle": "Suosittuja kursseja",
     "emailHeader": "Haluatko ilmoituksia uusista kursseista?",
     "emailButton": "LIITY",
     "emailThanks": "Kiitos listalle liittymisestä!",
@@ -15,6 +16,10 @@
     "moduleCourseStartPoint": "Aloita tästä",
     "showLimited": "Näytä vain rajatut",
     "showAll": "Näytä kaikki",
+    "showAllCourses": "Näytä kaikki kurssit",
+    "studyModulesTitle": "Opintokokonaisuudet",
+    "moduleInformation": "Kokonaisuuden tiedot",
+    "showAllModules": "Näytä kaikki kokonaisuudet",
     "moduleCourseTitle": "Opintokokonaisuuteen kuuluvat kurssit",
     "coursePageAvailable": "Kurssisivu jo nähtävillä",
     "privacyPolicy": "Tietosuojaseloste",
