--- a/frontend/translations/study-modules/en.json
+++ b/frontend/translations/study-modules/en.json
@@ -1,4 +1,5 @@
 {
+  "modulesTitle": "Study modules",
   "moduleNotFound": "Study module not found",
   "moduleWithIdNotFound": "Study module with slug <b>{{slug}}</b> not found!",
   "redirectMessagePre": "You will be redirected back to the module list in 5 seconds - press ",
