--- a/frontend/translations/study-modules/fi.json
+++ b/frontend/translations/study-modules/fi.json
@@ -1,4 +1,5 @@
 {
+  "modulesTitle": "Opinto&shy;kokonaisuudet",
   "moduleNotFound": "Opintokokonaisuutta ei löydy!",
   "moduleWithIdNotFound": "Opintokokonaisuutta tunnuksella <b>{{slug}}</b> ei löydy!",
   "redirectMessagePre": "Sinut ohjataan takaisin opintokokonaisuuksien listaan 5 sekunnin kuluessa - paina ",
