--- a/frontend/translations/common/se.json
+++ b/frontend/translations/common/se.json
@@ -68,8 +68,10 @@
     "selectAll": "Select all",
     "unscheduled": "Indefinitely open",
     "showCourse": "Show course",
-    "ectsHoursExplanation1": "The estimated workload of the course, which is estimated based on the ECTS received from the course. The course awards",
-    "ectsHoursExplanation2": "ECTS. At the University of Helsinki, one ECTS requires approximately 27 hours of work.",
+    "cr": "cr",
+    "hour": "h",
+    "ectsHoursExplanation1": "The estimated workload of the course, which is estimated based on the ECTS credits received from the course. The course awards",
+    "ectsHoursExplanation2": "ECTS credits. At the University of Helsinki, one ECTS credit requires approximately 27 hours of work.",
     "fi": "Suomeksi",
     "en": "In English",
     "noFields": "No fields",
