--- a/frontend/translations/_new/courses/en.json
+++ b/frontend/translations/_new/courses/en.json
@@ -3,5 +3,19 @@
   "heroSectionDescription1": "Suorita yksittäisiä kursseja",
   "heroSectionDescription2": "Opintokokonaisuuksien suorittaminen",
   "heroSectionDescription3": "Hae suoritusmerkinnät opintoihisi",
-  "coursesHeader": "All courses"
+  "coursesHeader": "All courses",
+  "resultShowing": "Showing {{count}}",
+  "resultCourse": "course",
+  "resultCoursePlural": "courses",
+  "resultModuleTags": "in {{tags}}",
+  "resultDifficultyTags": "on {{tags}} level",
+  "resultLanguageTags": "in {{tags}}",
+  "resultActive": "active",
+  "resultUpcoming": "upcoming",
+  "resultEnded": "ended",
+  "resultActivePlural": "active",
+  "resultUpcomingPlural": "upcoming",
+  "resultEndedPlural": "ended",
+  "resultOr": "or",
+  "resultAnd": "and"
 }
