--- a/frontend/translations/_new/courses/fi.json
+++ b/frontend/translations/_new/courses/fi.json
@@ -3,5 +3,19 @@
   "heroSectionDescription1": "Suorita yksittäisiä kursseja",
   "heroSectionDescription2": "Opintokokonaisuuksien suorittaminen",
   "heroSectionDescription3": "Hae suoritusmerkinnät opintoihisi",
-  "coursesHeader": "Kaikki kurssit"
+  "coursesHeader": "Kaikki kurssit",
+  "resultShowing": "Näytetään {{count}}",
+  "resultCourse": "kurssi",
+  "resultCoursePlural": "kurssia",
+  "resultModuleTags": "kokonaisuudessa {{tags}}",
+  "resultDifficultyTags": "tasolla {{tags}}",
+  "resultLanguageTags": "kielellä {{tags}}",
+  "resultActive": "aktiivinen",
+  "resultUpcoming": "tulossa oleva",
+  "resultEnded": "päättynyt",
+  "resultActivePlural": "aktiivista",
+  "resultUpcomingPlural": "tulossa olevaa",
+  "resultEndedPlural": "päättynyttä",
+  "resultOr": "tai",
+  "resultAnd": "ja"
 }
