Add English translation of privacy policy

--- a/frontend/public/md_pages/faq/tietosuojaseloste_en.mdx
+++ b/frontend/public/md_pages/faq/tietosuojaseloste_en.mdx
@@ -1,10 +1,10 @@
 import {ContentBox, SectionBox, Note} from "/components/Home/FAQ/Common"
-import PrivacyPolicy from "./tietosuojaseloste.md"
+import PrivacyPolicy from "./privacy-notice.md"
 
 <ContentBox>
 <PrivacyPolicy />
 </ContentBox>
 
 export const meta = {
-  title: "Tietosuojaseloste",
+  title: "Privacy policy",
 }
